fixed line spacing, fixed vocab  bug, added first chapter of first story

--- a/base.css
+++ b/base.css
@@ -50,3 +50,7 @@ a:hover {
 a:active {
     opacity: 0.7;
 }
+
+button {
+    color:black;
+}
